--- a/data-analyst.html
+++ b/data-analyst.html
@@ -51,11 +51,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
+<h5><a href='https://biffa.workable.com/j/E9CF1DD64D'>Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://cbre.referrals.selectminds.com/jobs/research-data-analyst-58446'>Research Data Analyst - CBRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbre.referrals.selectminds.com/jobs/research-data-analyst-58446'>Research Data Analyst - CBRE Careers</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -130,11 +130,11 @@
 <p>17 Jul 2019 ... Apply to M?XICO - Financial Senior Data Analyst at Linio in Ciudad de M?xico, 
 Paseo de la Reforma, Mexico.</p>
 <hr/>
-<h5><a href='https://kandidate.workable.com/j/755DAD07A1'>Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kandidate.workable.com/j/755DAD07A1'>Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
+<h5><a href='https://anaxee.freshteam.com/jobs/iqcIsGkSZ0FA/data-analyst-data-scientist-internship-tech-savvy'>Data Analyst / Data Scientist | Internship | Tech-Savvy</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Data Analyst / Data Scientist | Internship | Tech-Savvy|. Indore, Madhya Pradesh | 
 Full time. Apply Now. Job role: As a data analyst, you will be responsible for?...</p>
@@ -180,7 +180,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -188,7 +188,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://stjhs.referrals.selectminds.com/jobs/senior-clinical-data-analyst-41416'>Senior Clinical Data Analyst - St. Joseph Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stjhs.referrals.selectminds.com/jobs/senior-clinical-data-analyst-41416'>Senior Clinical Data Analyst - St. Joseph Health Careers</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -218,7 +218,7 @@ Kirkland, WA in Sunnyvale, California. Review all of the job details and apply?.
 <p>5 days ago ... The division is responsible for developing, evaluating, refining, reporting, and 
 presenting statistical data; and providing technical advice and assistance to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/sega-europe-limited/job/ot3Dafw3'>SEGA Europe Limited Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... The Data Analyst will work in the analytics team on games by SEGA Europe's 
 mobile studio, HARDlight. As part of the studio's Live Operations team, you would
@@ -257,7 +257,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/veristat/job/oybBafwe'>Veristat Careers - Manager, Statistical Programming</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/oybBafwe'>Veristat Careers - Manager, Statistical Programming</a></h5> 
 <p><span class="badge badge-light">Montreal Boston Canada Taipei</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -303,11 +303,11 @@ related technical field; Experience using statistics and machine learning to sol
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/11C588F09E'>riskmethods - Jobs: Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/11C588F09E'>riskmethods - Jobs: Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Data Analyst at riskmethods.</p>
 <hr/>
-<h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/USA---Washington---Bellevue/Sr-Statistician_R-42979?source=BuiltInSeattle'>Sr Statistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/search/job/USA---Washington---Bellevue/Sr-Statistician_R-42979?source=BuiltInSeattle'>Sr Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Each of these marketing channels center around a rich central problem from 
 deriving value from sparse data to auction theory and game theory all with the?...</p>
@@ -320,7 +320,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -413,7 +413,7 @@ hire, you'll be responsible for data needs throughout the organization. You'll b
 Automate quarterly insights across native / partner channels for external facing 
 analyst?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cloudflare/jobs/1777396?gh_jid=1777396'>Job Application for Data Analyst - Returnship at Cloudflare</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... The Path Forward Return to Work program at Cloudflare is a 16 week paid 
 returnship for experienced professionals returning to the workforce after taking 
@@ -431,7 +431,7 @@ time?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/bio-statistical-research-consultant-aAFeJiRVar6yZPaKld2Sj6'>Bio-Statistical Research Consultant #0095 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -484,7 +484,7 @@ data?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
